--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/style.css">
-    <link rel="stylesheet" href="/assets/normalize.css">
-</head>
-<body>
-    <header>
-
-    </header>
+    <link rel="stylesheet" href="/assets/style.css" />
+    <link rel="stylesheet" href="/assets/normalize.css" />
+  </head>
+  <body>
+    <header class="header"></header>
 
     <main>
-
+      <div class="block1-toShopping">blah blah</div>
+      <div class="block2-catalog"></div>
+      <div class="block3-aboutUs"></div>
+      <div class="block4-perfectPair"></div>
+      <div class="block5-team"></div>
+      <div class="block6-faq"></div>
+      <div class="block7-contacts"></div>
+      <div class="block8-questionForm"></div>
     </main>
 
-    <footer>
-
-    </footer>
+    <footer class="footer"></footer>
 
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
