--- a/index.html
+++ b/index.html
@@ -165,7 +165,21 @@
       <div class="block8-questionForm"></div>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__container">
+          <div class="footer__logo"><a href="">SneakMax</a></div>
+            <div class="footer__menu">
+              <ul>
+                <li><a href="#">Каталог</a></li>
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Подбор товара</a></li>
+                <li><a href="#">Наша команда</a></li>
+                <li><a href="#">Доставка и оплата</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+        </div>
+      </div>
+  </footer>
 
     <script src="index.js"></script>
   </body>
