--- a/index.html
+++ b/index.html
@@ -160,7 +160,19 @@
       </div>
 
       <div class="block5-team"></div>
-      <div class="block6-faq"></div>
+      <div class="block6-faq">
+        <div class="block6-faq__container">
+          <h2>Часто задаваемые вопросы</h2>
+          <details>
+            <summary>Вопрос 1</summary>
+              <p class="faq">А это ответ 1: в комплексе функционируют 6 детских садов с площадками, воспитателями и всякими другими людьми</p>
+          </details>
+          <details>
+            <summary>Вопрос 2</summary>
+              <p class="faq">А это ответ 2: в комплексе функционируют 6 детских садов с площадками, воспитателями и всякими другими людьми</p>
+          </details>
+        </div>
+      </div>
       <div class="block7-contacts"></div>
       <div class="block8-questionForm"></div>
     </main>
