--- a/index.html
+++ b/index.html
@@ -34,77 +34,102 @@
     <!--АняБ, переиспользуем h2-header, h3-header, all__paragraf-->
     <div class="block4-perfectPair">
 
-      <h2 class="h2-header">Мы подберем идеальную пару для вас</h2>
-      <p class="all__paragraf block4-p">Ответьте на три вопроса и мы вышлем каталог с самыми подходящими для вас
-        моделями</p>
-      <img src="./assets/image/block4imageBorder.png" alt="block4imageBorder">
-      <h3 class="h3-header">Какой тип кроссовок рассматриваете?</h3>
       <!--Блок 1 Выбор пары-->
+
+
       <div class="block4-perfectPair__container1">
 
-        <div class="block4-container-photo__mini">
-          <img class="block4image1" src="./assets/image/block4image.png" alt="block4image1">
-          <input type="radio" class="block4__checkbox" id="radio1" name="photo"><label for="radio1">кеды</label>
-        </div>
 
-        <div class="block4-container-photo__mini">
-          <img class="block4image1" src="./assets/image/block4image.png" alt="block4image1">
-          <input type="radio" class="block4__checkbox" id="radio2" name="photo"><label for="radio1">кеды</label>
-        </div>
+        <div class="block4-perfectPair__container1-header">
+          <h2 class="h2-header">Мы подберем идеальную пару для вас</h2>
+          <p class="all__paragraf block4-p">Ответьте на три вопроса и мы вышлем каталог с самыми подходящими для вас
+            моделями</p>
+          <img src="./assets/image/block4imageBorder.png" alt="block4imageBorder">
+          <h3 class="h3-header">Какой тип кроссовок рассматриваете?</h3>
 
-        <div class="block4-container-photo__mini">
-          <img class="block4image1" src="./assets/image/block4image.png" alt="block4image1">
-          <input type="radio" class="block4__checkbox" id="radio3" name="photo"><label for="radio1">кеды</label>
         </div>
+        <div class="block4-perfectPair__container1-photo">
+          <div class="block4-container-photo__mini">
+            <img class="block4image1" src="./assets/image/block4image.png" alt="block4image1">
+            <div>
+              <input type="radio" class="block4__checkbox" id="radio1" name="photo"><label for="radio1">кеды</label>
+            </div>
+          </div>
 
-        <div class="block4-container-photo__mini">
-          <img class="block4image1" src="./assets/image/block4image.png" alt="block4image1">
-          <input type="radio" class="block4__checkbox" id="radio4" name="photo"><label for="radio1">кеды</label>
+          <div class="block4-container-photo__mini">
+            <img class="block4image1" src="./assets/image/block4image.png" alt="block4image1">
+            <div>
+              <input type="radio" class="block4__checkbox" id="radio2" name="photo"><label for="radio1">кеды</label>
+            </div>
+          </div>
+
+          <div class="block4-container-photo__mini">
+            <img class="block4image1" src="./assets/image/block4image.png" alt="block4image1">
+            <div>
+              <input type="radio" class="block4__checkbox" id="radio3" name="photo"><label for="radio1">кеды</label>
+            </div>
+          </div>
+
+          <div class="block4-container-photo__mini">
+            <img class="block4image1" src="./assets/image/block4image.png" alt="block4image1">
+            <div>
+              <input type="radio" class="block4__checkbox" id="radio4" name="photo"><label for="radio1">кеды</label>
+            </div>
+          </div>
+
+          <div class="block4-container-photo__mini">
+            <img class="block4image1" src="./assets/image/block4image.png" alt="block4image1">
+            <div>
+              <input type="radio" class="block4__checkbox" id="radio5" name="photo"><label for="radio1">кеды</label>
+            </div>
+          </div>
+
+          <div class="block4-container-photo__mini">
+            <img class="block4image1" src="./assets/image/block4image.png" alt="block4image1">
+            <div>
+              <input type="radio" class="block4__checkbox" id="radio6" name="photo"><label for="radio1">кеды</label>
+            </div>
+          </div>
         </div>
+        <img src="./assets/image/block4imageBorder.png" alt="block4imageBorder">
 
-        <div class="block4-container-photo__mini">
-          <img class="block4image1" src="./assets/image/block4image.png" alt="block4image1">
-          <input type="radio" class="block4__checkbox" id="radio5" name="photo"><label for="radio1">кеды</label>
-        </div>
+        <div class="block4__buttonChange">
+          <!-- <button class="button btn-prev">Назад</button>-->
 
-        <div class="block4-container-photo__mini">
-          <img class="block4image1" src="./assets/image/block4image.png" alt="block4image1">
-          <input type="radio" class="block4__checkbox" id="radio6" name="photo"><label for="radio1">кеды</label>
+          <p class="all__paragraf">1 из 3</p>
+          <button class="button btn-next">Следующий шаг</button>
         </div>
 
       </div>
 
-
-      <img src="./assets/image/block4imageBorder.png" alt="block4imageBorder">
-
-
-      <div class="block4__buttonChange">
-        <p class="all__paragraf">1 из 3</p>
-        <button class="block4-button">Следующий шаг</button>
-      </div>
 
       <!--Блок 2 Выбор размера-->
       <div class="block4-perfectPair__container2">
 
-        <h2 class="h2-header">Мы подберем идеальную пару для вас</h2>
-        <p class="all__paragraf block4-p">Ответьте на три вопроса и мы вышлем каталог с самыми подходящими для вас
-          моделями</p>
-        <img src="./assets/image/block4imageBorder.png" alt="block4imageBorder">
+        <div class="block4-perfectPair__container1-header">
+          <h2 class="h2-header">Мы подберем идеальную пару для вас</h2>
+          <p class="all__paragraf block4-p">Ответьте на три вопроса и мы вышлем каталог с самыми подходящими для вас
+            моделями</p>
+          <img src="./assets/image/block4imageBorder.png" alt="block4imageBorder">
+          <h3 class="h3-header">Какой размер вам подойдет?</h3>
+        </div>
 
-
-        <h3 class="h3-header">Какой размер вам подойдет?</h3>
-        <input type="radio" name="size" id="size1"><label for="size1">менее 36</label>
-        <input type="radio" name="size" id="size1"><label for="size1">36-38</label>
-        <input type="radio" name="size" id="size1"><label for="size1">39-41</label>
-        <input type="radio" name="size" id="size1"><label for="size1">42-44</label>
-        <input type="radio" name="size" id="size1"><label for="size1">45 и больше</label>
-        <img src="./assets/image/block4image1.png" alt="block4Container2image">
+        <div class="block4-perfectPair__container2-size">
+          <input type="radio" name="size" id="size1"><label for="size1">менее 36</label>
+          <input type="radio" name="size" id="size2"><label for="size2">36-38</label>
+          <input type="radio" name="size" id="size3"><label for="size3">39-41</label>
+          <input type="radio" name="size" id="size4"><label for="size4">42-44</label>
+          <input type="radio" name="size" id="size5"><label for="size5">45 и больше</label>
+        </div>
+        <img class="block4-perfectPair__container2-image" src="./assets/image/block4image1.png"
+          alt="block4Container2image"><br>
 
         <img src="./assets/image/block4imageBorder.png" alt="block4imageBorder">
 
         <div class="block4__buttonChange">
+          <button class="button btn-prev">Назад</button>
           <p class="all__paragraf">1 из 3</p>
-          <button class="block4-button">Следующий шаг</button>
+          <button class="button btn-next">Следующий шаг</button>
         </div>
 
       </div>
@@ -122,11 +147,12 @@
         <img src="./assets/image/block4imageBorder.png" alt="block4imageBorder">
 
         <div class="block4__buttonChange">
+          <button class="button btn-prev">Назад</button>
           <p class="all__paragraf">1 из 3</p>
-          <button class="block4-button">Следующий шаг</button>
+          <button class="button btn-next">Следующий шаг</button>
         </div>
-
       </div>
+
 
 
       <!--Блок 4 Отправка формы-->
@@ -134,8 +160,9 @@
 
 
       <div class="block4__buttonChange">
+        <button class="button btn-prev">Назад</button>
         <p class="all__paragraf">1 из 3</p>
-        <button class="block4-button">Следующий шаг</button>
+        <button class="button btn-next">Следующий шаг</button>
       </div>
 
     </div>
