--- a/index.html
+++ b/index.html
@@ -91,10 +91,172 @@
 					src="./assets/image/block3image1.png"
 					alt="block3image1" />
 			</div>
-			<!-- Блок 1 Выбор пары-->
 
-			<div class="block4-perfectPair__container1">
-				<div class="block4-perfectPair__container1-header">
+			<!--АняБ, переиспользуем h2-header, h3-header, all__paragraf-->
+			<div class="block4-perfectPair">
+				<!--Блок 1 Выбор пары-->
+
+				<div class="block4-perfectPair__container1">
+					<div class="block4-perfectPair__container1-header">
+						<h2 class="h2-header">Мы подберем идеальную пару для вас</h2>
+						<p class="all__paragraf block4-p">
+							Ответьте на три вопроса и мы вышлем каталог с самыми подходящими для вас моделями
+						</p>
+						<img
+							src="./assets/image/block4imageBorder.png"
+							alt="block4imageBorder" />
+						<h3 class="h3-header">Какой тип кроссовок рассматриваете?</h3>
+					</div>
+					<div class="block4-perfectPair__container1-photo">
+						<div class="block4-container-photo__mini">
+							<img
+								class="block4image1"
+								src="./assets/image/block4image.png"
+								alt="block4image1" />
+							<div>
+								<input
+									type="radio"
+									class="block4__checkbox"
+									id="radio1"
+									name="photo" /><label for="radio1">кеды</label>
+							</div>
+						</div>
+
+						<div class="block4-container-photo__mini">
+							<img
+								class="block4image1"
+								src="./assets/image/block4image.png"
+								alt="block4image1" />
+							<div>
+								<input
+									type="radio"
+									class="block4__checkbox"
+									id="radio2"
+									name="photo" /><label for="radio1">кеды</label>
+							</div>
+						</div>
+
+						<div class="block4-container-photo__mini">
+							<img
+								class="block4image1"
+								src="./assets/image/block4image.png"
+								alt="block4image1" />
+							<div>
+								<input
+									type="radio"
+									class="block4__checkbox"
+									id="radio3"
+									name="photo" /><label for="radio1">кеды</label>
+							</div>
+						</div>
+
+						<div class="block4-container-photo__mini">
+							<img
+								class="block4image1"
+								src="./assets/image/block4image.png"
+								alt="block4image1" />
+							<div>
+								<input
+									type="radio"
+									class="block4__checkbox"
+									id="radio4"
+									name="photo" /><label for="radio1">кеды</label>
+							</div>
+						</div>
+
+						<div class="block4-container-photo__mini">
+							<img
+								class="block4image1"
+								src="./assets/image/block4image.png"
+								alt="block4image1" />
+							<div>
+								<input
+									type="radio"
+									class="block4__checkbox"
+									id="radio5"
+									name="photo" /><label for="radio1">кеды</label>
+							</div>
+						</div>
+
+						<div class="block4-container-photo__mini">
+							<img
+								class="block4image1"
+								src="./assets/image/block4image.png"
+								alt="block4image1" />
+							<div>
+								<input
+									type="radio"
+									class="block4__checkbox"
+									id="radio6"
+									name="photo" /><label for="radio1">кеды</label>
+							</div>
+						</div>
+					</div>
+					<img
+						src="./assets/image/block4imageBorder.png"
+						alt="block4imageBorder" />
+
+					<div class="block4__buttonChange">
+						<!-- <button class="button btn-prev">Назад</button>-->
+
+						<p class="all__paragraf">1 из 3</p>
+						<button class="button btn-next">Следующий шаг</button>
+					</div>
+				</div>
+
+				<!--Блок 2 Выбор размера-->
+				<div class="block4-perfectPair__container2">
+					<div class="block4-perfectPair__container1-header">
+						<h2 class="h2-header">Мы подберем идеальную пару для вас</h2>
+						<p class="all__paragraf block4-p">
+							Ответьте на три вопроса и мы вышлем каталог с самыми подходящими для вас моделями
+						</p>
+						<img
+							src="./assets/image/block4imageBorder.png"
+							alt="block4imageBorder" />
+						<h3 class="h3-header">Какой размер вам подойдет?</h3>
+					</div>
+
+					<div class="block4-perfectPair__container2-size">
+						<input
+							type="radio"
+							name="size"
+							id="size1" /><label for="size1">менее 36</label>
+						<input
+							type="radio"
+							name="size"
+							id="size2" /><label for="size2">36-38</label>
+						<input
+							type="radio"
+							name="size"
+							id="size3" /><label for="size3">39-41</label>
+						<input
+							type="radio"
+							name="size"
+							id="size4" /><label for="size4">42-44</label>
+						<input
+							type="radio"
+							name="size"
+							id="size5" /><label for="size5">45 и больше</label>
+					</div>
+					<img
+						class="block4-perfectPair__container2-image"
+						src="./assets/image/block4image1.png"
+						alt="block4Container2image" /><br />
+
+					<img
+						src="./assets/image/block4imageBorder.png"
+						alt="block4imageBorder" />
+
+					<div class="block4__buttonChange">
+						<button class="button btn-prev">Назад</button>
+						<p class="all__paragraf">1 из 3</p>
+						<button class="button btn-next">Следующий шаг</button>
+					</div>
+				</div>
+
+				<!--Блок 3 Добавление комментария-->
+				<div class="block4-perfectPair__container3">
 					<h2 class="h2-header">Мы подберем идеальную пару для вас</h2>
 					<p class="all__paragraf block4-p">
 						Ответьте на три вопроса и мы вышлем каталог с самыми подходящими для вас моделями
@@ -102,148 +264,25 @@
 					<img
 						src="./assets/image/block4imageBorder.png"
 						alt="block4imageBorder" />
-					<h3 class="h3-header">Какой тип кроссовок рассматриваете?</h3>
-				</div>
-				<div class="block4-perfectPair__container1-photo">
-					<div class="block4-container-photo__mini">
-						<img
-							class="block4image1"
-							src="./assets/image/block4image.png"
-							alt="block4image1" />
-						<div>
-							<input
-								type="radio"
-								class="block4__checkbox"
-								id="radio1"
-								name="photo" /><label for="radio1">кеды</label>
-						</div>
-					</div>
+					<h3 class="h3-header">Уточните какие-либо моменты</h3>
+					<textarea
+						name="comments"
+						id="block4Comment"
+						cols="30"
+						rows="10"></textarea>
 
-					<div class="block4-container-photo__mini">
-						<img
-							class="block4image1"
-							src="./assets/image/block4image.png"
-							alt="block4image1" />
-						<div>
-							<input
-								type="radio"
-								class="block4__checkbox"
-								id="radio2"
-								name="photo" /><label for="radio1">кеды</label>
-						</div>
-					</div>
-
-					<div class="block4-container-photo__mini">
-						<img
-							class="block4image1"
-							src="./assets/image/block4image.png"
-							alt="block4image1" />
-						<div>
-							<input
-								type="radio"
-								class="block4__checkbox"
-								id="radio3"
-								name="photo" /><label for="radio1">кеды</label>
-						</div>
-					</div>
-
-					<div class="block4-container-photo__mini">
-						<img
-							class="block4image1"
-							src="./assets/image/block4image.png"
-							alt="block4image1" />
-						<div>
-							<input
-								type="radio"
-								class="block4__checkbox"
-								id="radio4"
-								name="photo" /><label for="radio1">кеды</label>
-						</div>
-					</div>
-
-					<div class="block4-container-photo__mini">
-						<img
-							class="block4image1"
-							src="./assets/image/block4image.png"
-							alt="block4image1" />
-						<div>
-							<input
-								type="radio"
-								class="block4__checkbox"
-								id="radio5"
-								name="photo" /><label for="radio1">кеды</label>
-						</div>
-					</div>
-
-					<div class="block4-container-photo__mini">
-						<img
-							class="block4image1"
-							src="./assets/image/block4image.png"
-							alt="block4image1" />
-						<div>
-							<input
-								type="radio"
-								class="block4__checkbox"
-								id="radio6"
-								name="photo" /><label for="radio1">кеды</label>
-						</div>
-					</div>
-				</div>
-				<img
-					src="./assets/image/block4imageBorder.png"
-					alt="block4imageBorder" />
-
-				<div class="block4__buttonChange">
-					<button class="button btn-prev">Назад</button>
-
-					<p class="all__paragraf">1 из 3</p>
-					<button class="button btn-next">Следующий шаг</button>
-				</div>
-			</div>
-
-			<!--Блок 2 Выбор размера-->
-			<div class="block4-perfectPair__container2">
-				<div class="block4-perfectPair__container1-header">
-					<h2 class="h2-header">Мы подберем идеальную пару для вас</h2>
-					<p class="all__paragraf block4-p">
-						Ответьте на три вопроса и мы вышлем каталог с самыми подходящими для вас моделями
-					</p>
 					<img
 						src="./assets/image/block4imageBorder.png"
 						alt="block4imageBorder" />
-					<h3 class="h3-header">Какой размер вам подойдет?</h3>
+
+					<div class="block4__buttonChange">
+						<button class="button btn-prev">Назад</button>
+						<p class="all__paragraf">1 из 3</p>
+						<button class="button btn-next">Следующий шаг</button>
+					</div>
 				</div>
 
-				<div class="block4-perfectPair__container2-size">
-					<input
-						type="radio"
-						name="size"
-						id="size1" /><label for="size1">менее 36</label>
-					<input
-						type="radio"
-						name="size"
-						id="size2" /><label for="size2">36-38</label>
-					<input
-						type="radio"
-						name="size"
-						id="size3" /><label for="size3">39-41</label>
-					<input
-						type="radio"
-						name="size"
-						id="size4" /><label for="size4">42-44</label>
-					<input
-						type="radio"
-						name="size"
-						id="size5" /><label for="size5">45 и больше</label>
-				</div>
-				<img
-					class="block4-perfectPair__container2-image"
-					src="./assets/image/block4image1.png"
-					alt="block4Container2image" /><br />
-
-				<img
-					src="./assets/image/block4imageBorder.png"
-					alt="block4imageBorder" />
+				<!--Блок 4 Отправка формы-->
 
 				<div class="block4__buttonChange">
 					<button class="button btn-prev">Назад</button>
@@ -251,129 +290,6 @@
 					<button class="button btn-next">Следующий шаг</button>
 				</div>
 			</div>
-
-			<!--Блок 3 Добавление комментария-->
-			<div class="block4-perfectPair__container3">
-				<h2 class="h2-header">Мы подберем идеальную пару для вас</h2>
-				<p class="all__paragraf block4-p">
-					Ответьте на три вопроса и мы вышлем каталог с самыми подходящими для вас моделями
-				</p>
-				<img
-					src="./assets/image/block4imageBorder.png"
-					alt="block4imageBorder" />
-				<h3 class="h3-header">Уточните какие-либо моменты</h3>
-				<textarea
-					name="comments"
-					id="block4Comment"
-					cols="30"
-					rows="10"></textarea>
-
-				<img
-					src="./assets/image/block4imageBorder.png"
-					alt="block4imageBorder" />
-
-				<div class="block4__buttonChange">
-					<button class="button btn-prev">Назад</button>
-					<p class="all__paragraf">1 из 3</p>
-					<button class="button btn-next">Следующий шаг</button>
-				</div>
-			</div>
-
-			<!--Блок 4 Отправка формы-->
-
-			<div class="block4__buttonChange">
-				<button class="button btn-prev">Назад</button>
-				<p class="all__paragraf">1 из 3</p>
-				<button class="button btn-next">Следующий шаг</button>
-			</div>
-
-			<!-- АняБ, переиспользуем h2-header, h3-header, all__paragraf -->
-			<!-- <div class="block4-perfectPair">
-				<h2 class="h2-header">Мы подберем идеальную пару для вас</h2>
-				<p class="all__paragraf block4-p">
-					Ответьте на три вопроса и мы вышлем каталог с самыми подходящими для вас моделями
-				</p>
-				<img
-					src="./assets/image/block4imageBorder.png"
-					alt="block4imageBorder" />
-				<h3 class="h3-header">Какой тип кроссовок рассматриваете?</h3>
-
-				<div class="block4-container-photo">
-					<div class="block4-container-photo__mini">
-						<img
-							class="block4image1"
-							src="./assets/image/block4image.png"
-							alt="block4image1" />
-						<input
-							type="checkbox"
-							class="block4__checkbox"
-							value="кеды" />
-					</div>
-
-					<div class="block4-container-photo__mini">
-						<img
-							class="block4image1"
-							src="./assets/image/block4image.png"
-							alt="block4image1" />
-						<input
-							type="checkbox"
-							class="block4__checkbox"
-							value="кеды" />
-					</div>
-
-					<div class="block4-container-photo__mini">
-						<img
-							class="block4image1"
-							src="./assets/image/block4image.png"
-							alt="block4image1" />
-						<input
-							type="checkbox"
-							class="block4__checkbox"
-							value="кеды" />
-					</div>
-
-					<div class="block4-container-photo__mini">
-						<img
-							class="block4image1"
-							src="./assets/image/block4image.png"
-							alt="block4image1" />
-						<input
-							type="checkbox"
-							class="block4__checkbox"
-							value="кеды" />
-					</div>
-
-					<div class="block4-container-photo__mini">
-						<img
-							class="block4image1"
-							src="./assets/image/block4image.png"
-							alt="block4image1" />
-						<input
-							type="checkbox"
-							class="block4__checkbox"
-							value="кеды" />
-					</div>
-
-					<div class="block4-container-photo__mini">
-						<img
-							class="block4image1"
-							src="./assets/image/block4image.png"
-							alt="block4image1" />
-						<input
-							type="checkbox"
-							class="block4__checkbox"
-							value="кеды" />
-					</div>
-				</div>
-				<img
-					src="./assets/image/block4imageBorder.png"
-					alt="block4imageBorder" />
-
-				<div class="block4__buttonChange">
-					<p class="all__paragraf">1 из 3</p>
-					<button class="block4-button">Следующий шаг</button>
-				</div>
-			</div> -->
 
 			<div class="block5-team"></div>
 
