block7 api script

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="stylesheet" href="./assets/normalize.css" />
+
+    <script
+      src="https://api-maps.yandex.ru/2.1/?apikey=e0a9ddc8-5f8f-4ccd-80bf-c2af660a4880&lang=ru_RU"
+      type="text/javascript"></script>
   </head>
 
   <body>
